--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@firebase/auth": "^0.20.5",
     "firebase": "^9.9.1",
     "ng-image-slider": "^6.0.0",
+    "ng-mat-carousel": "^0.11.1",
     "ngx-toastr": "^15.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.0",
