--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "ngx-toastr": "^15.0.0",
     "primeicons": "^5.0.0",
     "primeng": "^14.0.0",
+    "random-email": "^1.0.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
